--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -11,7 +11,7 @@
 \faculty{Faculty of Science, Technology,\\ Engineering and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
-\tntitle{Title of TN}
+\tntitle[Title of SS]{Title of TN}
 \tnyear{2024J}
 \copyrightyear{2024} % If different from \abyear
 %\tutoronlytitle{ {\bfseries Title for tutor-only environment\par}}      % specifies title for 'Tutor-only' environment
