--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -655,6 +655,7 @@ Sets options (including turning off) for horizontal lines after |\subtotal| and
 |\subtotal*| command. Supported options, in any order, are:
 \begin{itemize}
   \item |moveleft=<length>|, default is |.1\textwidth|: specifies the horizontal offset of the line;
+  \item |movedown=<length>|, default is |0pt|: allows you to adjust the vertical space between the `subtotal' text and the line;
   \item |width=<length>|, default is |1.5\textwidth|: specifies the horizontal width of the line;
   \item |height=<length>|, default is |2pt|: specifies the height of the line;
   \item |color=<color>|, default is |black|: specifies the colour of the line;
@@ -670,7 +671,7 @@ Sample uses include, for example:
 
 |\setSubtotalHline[moveleft=0pt,height=5pt,color=orange]|
 
-This command is just a short cut to the |\pgfkeys| command, and 
+This command is just a shortcut to the |\pgfkeys| command, and 
 users familiar with the syntax of |\pgfkeys| might prefer to use, 
 for example:
 
@@ -1343,6 +1344,7 @@ Sets options (including turning off) for horizontal lines after |\subtotal| and
 |\subtotal*| command. Supported options, in any order, are:
 \begin{itemize}
   \item |moveleft=<length>|, default is |.1\textwidth|: specifies the horizontal offset of the line;
+  \item |movedown=<length>|, default is |0pt|: allows you to adjust the vertical space between the `subtotal' text and the line;
   \item |width=<length>|, default is |1.5\textwidth|: specifies the horizontal width of the line;
   \item |height=<length>|, default is |2pt|: specifies the height of the line;
   \item |color=<color>|, default is |black|: specifies the colour of the line;
