--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -1,4 +1,4 @@
-\documentclass[remote]{ouexam} 
+\documentclass[remote,showsolutions]{ouexam} 
 % Main available options:
 %  remote           For remote exam papers
 %  specimen			For specimen exam papers
@@ -75,16 +75,19 @@ Solutions can be placed in-line, to generate solution files from the same source
 
 Inside solutions, notes can be added to the marks.\mk[Like this]{4}
 
-You can display a mark but prevent it from getting added to the total and subtotal counters.\mk*[An alternative solution perhaps]{4}
+You can award decimals, e.g.\ half marks\mk{.5}
+
+Everything gets rendered nicely and added up.\mk{1.5}
+
+You can display a mark but prevent it from getting added to the total and subtotal counters.\mk*[An alternative solution perhaps]{4}[-5pt]
 
 Automatically add up part marks inside the solution environment:
-
 \subtotal*
 
 After a subtotal, you can have some more marks.\mk{3}
 
-Rather than automatically adding up marks, you can specify a total or subtotal: 
-\subtotal{3}
+You can also manually specify a total or subtotal. Note that these subtotals do not get added to the question total. 
+\subtotal{4}
 
 \total*
 \end{solution}
@@ -108,7 +111,7 @@ Solutions can be placed in-line, to generate solution files from the same source
 \begin{solution}
 Solutions can be created per sub-question, or per sub-sub-question, or after the entire question.\mk{2}
 
-Note that if you insert solutions per subquestion, then you cannot use the `solutionsonly' features.
+Note that if you insert solutions per sub-question, then you cannot use the `solutionsonly' features.
 \end{solution}
 \end{enumerate}
 \end{enumerate}
