ouexam: deprecation warnings
Retiring `\solnmarksplus` and `\mkplus` stage 1.

--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -1,4 +1,4 @@
-\documentclass[remote,showsolutions]{ouexam} 
+\documentclass[remote]{ouexam} 
 % Main available options:
 %  remote           For remote exam papers
 %  specimen			For specimen exam papers
