--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -8,17 +8,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % MODULE/DATE/TIME INFORMATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\faculty{Faculty of Science, Technology,\\ Engineering and Mathematics}
+%\faculty{Faculty of Science, Technology,\\ Engineering and Mathematics}
 \modulecode{MXXX}
 \moduletitle{Title of Module}
 \tntitle[Title of SS]{Title of TN}
 \tnyear{2024J}
-\copyrightyear{2024} % If different from \abyear
+\copyrightyear{2024} % If different from \tnyear
 %\tutoronlytitle{ {\bfseries Title for tutor-only environment\par}}      % specifies title for 'Tutor-only' environment
 %\studentonlytitle{Title for student-only environment\par}  % specifies title for 'Student-only' environment
 %\specsolnscolor{blue} % can be used to change text colour in specsolns mode
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
-\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
+%\oulogofilebase{OU_Master_LOGO_BLACK_17-5mmForA4width}% Overrides internal OU logo specification
 %\switchmarks % Can be used to place marks to right of comments
 %% alternative way of updating the above information
 %\metadataset{faculty=STEM, 
