--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -47,7 +47,7 @@
 suggestions go to \href{https://github.com/rbrignall/OU-SUPPS}%
 {\texttt{https://github.com/rbrignall/OU-SUPPS}}.}}
 
-\date{Version 2.4.1\\2021-12-02}
+\date{Version 4.0\\2023-03-21}
 
 \IfFileExists{enumitem.sty}{\usepackage{enumitem}}{}
 
@@ -206,7 +206,7 @@ Command for the instructions/rubric on the front page of the booklet (optional, 
 \begin{desc}
 |\oulogofilebase{...}|
 \end{desc}
-Overrides the internally-specified for the name of the OU logo, currently |OU_Master_Logo_Black_CMYK_29mm|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
+Overrides the internally-specified for the name of the OU logo, currently |OU_Master_LOGO_BLACK_17-5mmForA4width|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
 
 \LaTeX\ files that use \textsf{OU-SUPPS} class files do \emph{not} need the OU logo to compile: if the specified logo file is not present, a placeholder box will be inserted instead.
 
@@ -483,7 +483,7 @@ Changes the text that appears at the top of multi-choice questions (optional, de
 \begin{desc}
 |\oulogofilebase{...}|
 \end{desc}
-Overrides the internally-specified for the name of the OU logo, currently |OU_Master_Logo_Black_CMYK_29mm|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
+Overrides the internally-specified for the name of the OU logo, currently |OU_Master_LOGO_BLACK_17-5mmForA4width|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
 
 \LaTeX\ files that use \textsf{OU-SUPPS} class files do \emph{not} need the OU logo to compile: if the specified logo file is not present, a placeholder box will be inserted instead.
 
@@ -1070,7 +1070,7 @@ Command for the instructions/rubric on the front page of the exam (optional, but
 \begin{desc}
 |\oulogofilebase{...}|
 \end{desc}
-Overrides the internally-specified for the name of the OU logo, currently |OU_Master_Logo_Black_CMYK_29mm|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
+Overrides the internally-specified for the name of the OU logo, currently |OU_Compact_LOGO_BLACK_40mm| for exams and specimens, and |OU_Master_LOGO_BLACK_17-5mmForA4width| for solutions. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
 
 \LaTeX\ files that use \textsf{OU-SUPPS} class files do \emph{not} need the OU logo to compile: if the specified logo file is not present, a placeholder box will be inserted instead.
 
@@ -1684,7 +1684,7 @@ Personal identifier (PI): \\[20pt]
 \begin{desc}
 |\oulogofilebase{...}|
 \end{desc}
-Overrides the internally-specified for the name of the OU logo, currently |OU_Master_Logo_Black_CMYK_29mm|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
+Overrides the internally-specified for the name of the OU logo, currently |OU_Master_LOGO_BLACK_17-5mmForA4width|. The filename should be specified \emph{without} extension (|.pdf| or |.eps|), as this will be added automatically depending on whether the source file is compiled using |latex| or |pdflatex|.
 
 \LaTeX\ files that use \textsf{OU-SUPPS} class files do \emph{not} need the OU logo to compile: if the specified logo file is not present, a placeholder box will be inserted instead.
 
