--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -47,7 +47,7 @@
 suggestions go to \href{https://github.com/rbrignall/OU-SUPPS}%
 {\texttt{https://github.com/rbrignall/OU-SUPPS}}.}}
 
-\date{Version 4.0\\2023-03-21}
+\date{Version 3.0.1\\2023-04-17}
 
 \IfFileExists{enumitem.sty}{\usepackage{enumitem}}{}
 
@@ -97,7 +97,7 @@ In addition, template \LaTeX\ files for each class file are available, illustrat
 \item The relevant class file (e.g.\ \texttt{ouab.cls} if you're creating an Assignment Booklet).
 \end{itemize}
 
-\paragraph{Logo files:}The OU Logo files are no longer held in the Github repository, and are \emph{not} required to be able to compile tex files that use any of the classes in \textsf{OU-SUPPS}. If you are a central member of staff and require a copy of the OU logos, please speak to the developer (Robert Brignall) or the DPU.
+\paragraph{Logo files:}The OU Logo files are no longer held in the Github repository, and are \emph{not} required to be able to compile tex files that use any of the classes in \textsf{OU-SUPPS}. If you are a central member of staff and require a copy of the OU logos, please speak to the DPU.
 
 
 \section{Using \texttt{ouab.cls}}
